--- a/index.html
+++ b/index.html
@@ -488,6 +488,211 @@
       font-size: 16px;
     }
     
+    /* Nosotros Section */
+    .nosotros {
+      margin: 80px 0;
+      padding: 60px 0;
+    }
+
+    .nosotros-content {
+      max-width: 900px;
+      margin: 0 auto;
+      text-align: center;
+    }
+
+    .nosotros-content p {
+      font-size: 18px;
+      line-height: 1.9;
+      color: var(--text-muted);
+      margin-bottom: 25px;
+    }
+
+    .nosotros-highlight {
+      background: linear-gradient(135deg, rgba(0, 212, 255, 0.1), rgba(181, 55, 255, 0.1));
+      border: 1px solid rgba(255, 255, 255, 0.1);
+      border-radius: 20px;
+      padding: 40px;
+      margin-top: 40px;
+      backdrop-filter: blur(10px);
+    }
+
+    .nosotros-highlight h3 {
+      font-size: 28px;
+      margin-bottom: 20px;
+      background: linear-gradient(90deg, var(--accent-blue), var(--accent-purple));
+      -webkit-background-clip: text;
+      -webkit-text-fill-color: transparent;
+      background-clip: text;
+    }
+
+    /* Proposito Section */
+    .proposito {
+      margin: 80px 0;
+      position: relative;
+    }
+
+    .proposito-grid {
+      display: grid;
+      grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+      gap: 30px;
+      margin-top: 50px;
+    }
+
+    .proposito-item {
+      background: linear-gradient(135deg, rgba(10, 14, 26, 0.9), rgba(20, 24, 36, 0.9));
+      backdrop-filter: blur(10px);
+      border: 1px solid rgba(255, 255, 255, 0.1);
+      border-radius: 25px;
+      padding: 40px;
+      position: relative;
+      overflow: hidden;
+      transition: all 0.4s ease;
+    }
+
+    .proposito-item::before {
+      content: '';
+      position: absolute;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 4px;
+      background: linear-gradient(90deg, var(--accent-blue), var(--accent-purple), var(--accent-pink));
+      background-size: 200% 100%;
+      animation: gradientMove 3s linear infinite;
+    }
+
+    .proposito-item:hover {
+      transform: translateY(-10px);
+      border-color: var(--accent-blue);
+      box-shadow: 0 20px 50px rgba(0, 212, 255, 0.3);
+    }
+
+    .proposito-icon {
+      font-size: 48px;
+      margin-bottom: 20px;
+      display: inline-block;
+      animation: bounce 2s infinite;
+    }
+
+    @keyframes bounce {
+      0%, 100% { transform: translateY(0); }
+      50% { transform: translateY(-10px); }
+    }
+
+    .proposito-item h3 {
+      font-size: 24px;
+      margin-bottom: 15px;
+      color: var(--text-light);
+    }
+
+    .proposito-item p {
+      color: var(--text-muted);
+      line-height: 1.7;
+      font-size: 16px;
+    }
+
+    /* Equipo Section */
+    .equipo {
+      margin: 80px 0;
+      padding: 60px 0;
+    }
+
+    .team-grid {
+      display: grid;
+      grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
+      gap: 25px;
+      margin-top: 50px;
+    }
+
+    .team-member {
+      background: linear-gradient(135deg, rgba(10, 14, 26, 0.8), rgba(20, 24, 36, 0.8));
+      backdrop-filter: blur(10px);
+      border: 2px solid rgba(255, 255, 255, 0.1);
+      border-radius: 20px;
+      padding: 25px;
+      text-align: center;
+      transition: all 0.4s ease;
+      position: relative;
+      overflow: hidden;
+    }
+
+    .team-member::after {
+      content: '';
+      position: absolute;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 3px;
+      background: linear-gradient(90deg, var(--accent-blue), var(--accent-purple));
+      transform: scaleX(0);
+      transition: transform 0.4s ease;
+    }
+
+    .team-member:hover::after {
+      transform: scaleX(1);
+    }
+
+    .team-member:hover {
+      transform: translateY(-10px) scale(1.02);
+      border-color: var(--accent-blue);
+      box-shadow: 0 15px 40px rgba(0, 212, 255, 0.4);
+    }
+
+    .member-avatar {
+      width: 100px;
+      height: 100px;
+      border-radius: 50%;
+      margin: 0 auto 15px;
+      border: 3px solid var(--accent-blue);
+      object-fit: cover;
+      transition: all 0.3s ease;
+      background: linear-gradient(135deg, var(--accent-purple), var(--accent-blue));
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      font-size: 40px;
+      font-weight: 900;
+      color: white;
+    }
+
+    .member-avatar img {
+      width: 100%;
+      height: 100%;
+      border-radius: 50%;
+      object-fit: cover;
+    }
+
+    .team-member:hover .member-avatar {
+      transform: scale(1.1) rotate(5deg);
+      border-color: var(--accent-purple);
+      box-shadow: 0 0 30px var(--glow);
+    }
+
+    .member-name {
+      font-size: 18px;
+      font-weight: 700;
+      margin-bottom: 8px;
+      background: linear-gradient(90deg, var(--accent-blue), white);
+      -webkit-background-clip: text;
+      -webkit-text-fill-color: transparent;
+      background-clip: text;
+    }
+
+    .member-role {
+      font-size: 13px;
+      color: var(--text-muted);
+      margin-bottom: 12px;
+      font-weight: 600;
+    }
+
+    .member-info {
+      font-size: 13px;
+      color: var(--text-muted);
+      line-height: 1.6;
+      padding-top: 12px;
+      border-top: 1px solid rgba(255, 255, 255, 0.1);
+    }
+
     /* Features Section */
     .features {
       margin: 80px 0;
@@ -828,6 +1033,20 @@
       }
 
       .purpose-grid {
+        grid-template-columns: 1fr;
+      }
+      .team-grid {
+        grid-template-columns: repeat(auto-fill, minmax(150px, 1fr));
+        gap: 20px;
+      }
+
+      .member-avatar {
+        width: 80px;
+        height: 80px;
+        font-size: 32px;
+      }
+
+      .proposito-grid {
         grid-template-columns: 1fr;
       }
     }
