--- a/index.html
+++ b/index.html
@@ -642,9 +642,9 @@
     <!-- Hero Section -->
     <section id="inicio" class="hero">
       <div class="hero-content">
-        <h2>Vivi el mejor roleplay acá, en Argentina RP.</h2>
+        <h2>Vive el mejor roleplay acá, en Argentina RP.</h2>
         <p>
-          Unite a la mejor comunidad de roleplay inspirada en Emergency Response: Liberty County. 
+          Únete a la mejor comunidad de roleplay inspirada en Emergency Response: Liberty County. 
           Participá en eventos exclusivos, formá parte de facciones policiales, y experimentá el roleplay más inmersivo.
         </p>
         <div class="hero-buttons">
@@ -805,3 +805,4 @@
 
 </body>
 </html>
+
