--- a/index.html
+++ b/index.html
@@ -644,8 +644,8 @@
       <div class="hero-content">
         <h2>Vive el mejor roleplay acá, en Argentina RP.</h2>
         <p>
-          Únete a la mejor comunidad de roleplay inspirada en Emergency Response: Liberty County. 
-          Participá en eventos exclusivos, formá parte de facciones policiales, y experimentá el roleplay más inmersivo.
+          Argentina Roleplay es una comunidad enfocada en ofrecer un roleplay realista y organizado dentro de ER:LC. Buscamos crear un entorno seguro y profesional donde los jugadores disfruten de experiencias auténticas inspiradas en el entorno argentino.
+          Nuestro propósito es brindar un espacio donde cada usuario pueda desarrollar su personaje, vivir situaciones realistas y formar parte de una comunidad unida, responsable y comprometida con el respeto, la inmersión y la calidad del rol.      
         </p>
         <div class="hero-buttons">
           <a href="https://discord.gg/argentina-rp-er-lc-1349870169056350270" class="btn btn-primary" target="_blank">Unirse Ahora</a>
@@ -802,4 +802,5 @@
     // Stars
     const starsContainer = document.getElementById('stars');
     for
+
 
