--- a/index.html
+++ b/index.html
@@ -659,7 +659,7 @@
           <p>Creá el DNI de tu personaje y preparate para una aventura</p>
           <div class="stats">
             <div class="stat-item">
-              <div class="stat-number">1150+</div>
+              <div class="stat-number">+1350</div>
               <div class="stat-label">Miembros</div>
             </div>
             <div class="stat-item">
@@ -802,5 +802,6 @@
     // Stars
     const starsContainer = document.getElementById('stars');
     for
+
 
 
