--- a/index.html
+++ b/index.html
@@ -635,7 +635,7 @@
         <a href="https://www.canva.com/design/DAG1z80J_O8/dAimr2cXpgcwnpMevlf41w/edit?utm_content=DAG1z80J_O8&utm_campaign=designshare&utm_medium=link2&utm_source=sharebutton" target="_blank">Normativas</a>
         <a href="#memberships">Membresías</a>
         <a href="https://www.roblox.com/es/communities/33453357/Argentina-RP-Spanish-ER-LC#!/about" target="_blank">Roblox</a>
-        <a href="https://discord.gg/argentina-rp-er-lc-1349870169056350270" class="btn-discord" target="_blank">Discord</a>
+        <a href="https://discord.gg/argrp" class="btn-discord" target="_blank">Discord</a>
       </div>
     </nav>
 
@@ -648,7 +648,7 @@
           Nuestro propósito es brindar un espacio donde cada usuario pueda desarrollar su personaje, vivir situaciones realistas y formar parte de una comunidad unida, responsable y comprometida con el respeto, la inmersión y la calidad del rol.      
         </p>
         <div class="hero-buttons">
-          <a href="https://discord.gg/argentina-rp-er-lc-1349870169056350270" class="btn btn-primary" target="_blank">Unirse Ahora</a>
+          <a href="https://discord.gg/argrp" class="btn btn-primary" target="_blank">Unirse Ahora</a>
           <a href="https://www.canva.com/design/DAG1z80J_O8/dAimr2cXpgcwnpMevlf41w/edit?utm_content=DAG1z80J_O8&utm_campaign=designshare&utm_medium=link2&utm_source=sharebutton" class="btn btn-secondary" target="_blank">Ver Normativas</a>
         </div>
       </div>
@@ -667,7 +667,7 @@
               <div class="stat-label">Activos</div>
             </div>
           </div>
-          <a href="https://discord.gg/argentina-rp-er-lc-1349870169056350270" class="btn btn-primary" target="_blank" style="width: 100%; margin-top: 20px;">Unirse al Discord</a>
+          <a href="https://discord.gg/argrp" class="btn btn-primary" target="_blank" style="width: 100%; margin-top: 20px;">Unirse al Discord</a>
         </div>
       </div>
     </section>
@@ -802,6 +802,7 @@
     // Stars
     const starsContainer = document.getElementById('stars');
     for
+
 
 
 
