--- a/index.html
+++ b/index.html
@@ -191,11 +191,11 @@ footer{background:rgba(10,14,26,.95);backdrop-filter:blur(30px);border-top:1px s
 </a>
 <ul class="nav-links" id="navLinks">
 <li><a href="#inicio" class="active">Inicio</a></li>
-<li><a href="#features">Sobre Nosotros</a></li>
-<li><a href="#factions">Facciones y Organizaciones</a></li>
+<li><a href="#features">Nosotros</a></li>
+<li><a href="#factions">Facciones</a></li>
 <li><a href="#memberships">Membresías</a></li>
-<li><a href="#testimonials">Dirección General</a></li>
-<li><a href="#faq">Preguntas Frecuentes</a></li>
+<li><a href="#testimonials">Dirección</a></li>
+<li><a href="#faq">F.A.Q</a></li>
 <li><a href="https://discord.gg/argrp" class="cta-btn" target="_blank">Únete a nuestro Discord</a></li>
 </ul>
 <button class="mobile-toggle" id="mobileToggle" aria-label="Toggle menu">
@@ -830,3 +830,4 @@ animateElements.forEach(el => {
 </script>
 </body>
 </html>
+
