--- a/index.html
+++ b/index.html
@@ -1630,7 +1630,7 @@ footer{
 <li><a href="#memberships">Membresías</a></li>
 <li><a href="#testimonials">Dirección</a></li>
 <li><a href="#faq">F.A.Q</a></li>
-<li><a href="https://discord.gg/argrp" class="cta-btn" target="_blank" rel="noopener noreferrer">Discord</a></li>
+<li><a href="https://discord.gg/argentina-rp-er-lc-1349870169056350270" class="cta-btn" target="_blank" rel="noopener noreferrer">Discord</a></li>
 </ul>
 <button class="mobile-toggle" id="mobileToggle" aria-label="Toggle menu" aria-expanded="false">
 <span></span><span></span><span></span>
@@ -1649,7 +1649,7 @@ footer{
 <h1>Únete a nuestro <span class="gradient-text">servidor</span> de ER:LC</h1>
 <p>Únete a esta experiencia increíble, contamos con distintas facciones que abajo dejaremos más información sobre la comunidad y sobre nosotros, así mismo te dejamos algunas preguntas frecuentes que puedes revisar.</p>
 <div class="hero-actions">
-<a href="https://discord.gg/argrp" class="btn btn-primary" target="_blank" rel="noopener noreferrer">
+<a href="https://discord.gg/argentina-rp-er-lc-1349870169056350270" class="btn btn-primary" target="_blank" rel="noopener noreferrer">
 <span>Unirse al Discord</span>
 </a>
 <a href="https://www.canva.com/design/DAG1z80J_O8/dAimr2cXpgcwnpMevlf41w/edit" class="btn btn-secondary" target="_blank" rel="noopener noreferrer">
@@ -1679,7 +1679,7 @@ footer{
 <span class="stat-label">COMUNIDAD ARGENTINA V.4</span>
 </div>
 </div>
-<a href="https://discord.gg/argrp" class="btn btn-primary" target="_blank" rel="noopener noreferrer" style="width:100%;justify-content:center;margin-top:20px">
+<a href="https://discord.gg/argentina-rp-er-lc-1349870169056350270" class="btn btn-primary" target="_blank" rel="noopener noreferrer" style="width:100%;justify-content:center;margin-top:20px">
 <span>🔵 | UNIRSE AL DISCORD</span>
 </a>
 </div>
@@ -2044,7 +2044,7 @@ footer{
 <h2>¿LISTO PARA LA ACCIÓN?</h2>
 <p>Más de 1600 jugadores ya están viviendo la experiencia, tu leyenda comienza AHORA. Unete para vivir la mejor experiencia del roleplay Argentino.</p>
 <div class="cta-actions">
-<a href="https://discord.gg/argrp" class="btn btn-primary" target="_blank" rel="noopener noreferrer">
+<a href="https://discord.gg/argentina-rp-er-lc-1349870169056350270" class="btn btn-primary" target="_blank" rel="noopener noreferrer">
 <span>UNIRSE AL DISCORD</span>
 </a>
 <a href="https://www.roblox.com/es/communities/33453357/Argentina-RP-Spanish-ER-LC#!/about" class="btn btn-secondary" target="_blank" rel="noopener noreferrer">
@@ -2063,7 +2063,7 @@ footer{
 <h3>Argentina Roleplay</h3>
 <p>Página web ficticia, la misma está hecha para un juego virtual de la plataforma de Roblox y Discord. Funcional desde 2026.</p>
 <div class="social-links">
-<a href="https://discord.gg/argrp" class="social-link" target="_blank" rel="noopener noreferrer" title="Discord" aria-label="Discord">
+<a href="https://discord.gg/argentina-rp-er-lc-1349870169056350270" class="social-link" target="_blank" rel="noopener noreferrer" title="Discord" aria-label="Discord">
 <svg width="20" height="20" viewBox="0 0 24 24" fill="currentColor"><path d="M20.317 4.37a19.791 19.791 0 0 0-4.885-1.515a.074.074 0 0 0-.079.037c-.21.375-.444.864-.608 1.25a18.27 18.27 0 0 0-5.487 0a12.64 12.64 0 0 0-.617-1.25a.077.077 0 0 0-.079-.037A19.736 19.736 0 0 0 3.677 4.37a.07.07 0 0 0-.032.027C.533 9.046-.32 13.58.099 18.057a.082.082 0 0 0 .031.057a19.9 19.9 0 0 0 5.993 3.03a.078.078 0 0 0 .084-.028a14.09 14.09 0 0 0 1.226-1.994a.076.076 0 0 0-.041-.106a13.107 13.107 0 0 1-1.872-.892a.077.077 0 0 1-.008-.128a10.2 10.2 0 0 0 .372-.292a.074.074 0 0 1 .077-.01c3.928 1.793 8.18 1.793 12.062 0a.074.074 0 0 1 .078.01c.12.098.246.198.373.292a.077.077 0 0 1-.006.127a12.299 12.299 0 0 1-1.873.892a.077.077 0 0 0-.041.107c.36.698.772 1.362 1.225 1.993a.076.076 0 0 0 .084.028a19.839 19.839 0 0 0 6.002-3.03a.077.077 0 0 0 .032-.054c.5-5.177-.838-9.674-3.549-13.66a.061.061 0 0 0-.031-.03zM8.02 15.33c-1.183 0-2.157-1.085-2.157-2.419c0-1.333.956-2.419 2.157-2.419c1.21 0 2.176 1.096 2.157 2.42c0 1.333-.956 2.418-2.157 2.418zm7.975 0c-1.183 0-2.157-1.085-2.157-2.419c0-1.333.955-2.419 2.157-2.419c1.21 0 2.176 1.096 2.157 2.42c0 1.333-.946 2.418-2.157 2.418z"/></svg>
 </a>
 <a href="https://www.roblox.com/es/communities/33453357/Argentina-RP-Spanish-ER-LC#!/about" class="social-link" target="_blank" rel="noopener noreferrer" title="Roblox" aria-label="Roblox">
@@ -2084,7 +2084,7 @@ footer{
 <h4>Recursos</h4>
 <ul class="footer-links">
 <li><a href="https://www.canva.com/design/DAG1z80J_O8/dAimr2cXpgcwnpMevlf41w/edit" target="_blank" rel="noopener noreferrer">Normativas</a></li>
-<li><a href="https://discord.gg/argrp" target="_blank" rel="noopener noreferrer">Soporte</a></li>
+<li><a href="https://discord.gg/argentina-rp-er-lc-1349870169056350270" target="_blank" rel="noopener noreferrer">Soporte</a></li>
 <li><a href="#faq">Preguntas Frecuentes</a></li>
 <li><a href="https://discord.gg/argrp" target="_blank" rel="noopener noreferrer">Reportar Errores</a></li>
 </ul>
@@ -2092,10 +2092,10 @@ footer{
 <div class="footer-section">
 <h4>Comunidad</h4>
 <ul class="footer-links">
-<li><a href="https://discord.gg/argrp" target="_blank" rel="noopener noreferrer">Discord</a></li>
+<li><a href="https://discord.gg/argentina-rp-er-lc-1349870169056350270" target="_blank" rel="noopener noreferrer">Discord</a></li>
 <li><a href="https://www.roblox.com/es/communities/33453357/Argentina-RP-Spanish-ER-LC#!/about" target="_blank" rel="noopener noreferrer">Grupo Roblox</a></li>
-<li><a href="https://discord.gg/argrp" target="_blank" rel="noopener noreferrer">Eventos</a></li>
-<li><a href="https://discord.gg/argrp" target="_blank" rel="noopener noreferrer">Actualizaciones</a></li>
+<li><a href="https://discord.gg/argentina-rp-er-lc-1349870169056350270" target="_blank" rel="noopener noreferrer">Eventos</a></li>
+<li><a href="https://discord.gg/argentina-rp-er-lc-1349870169056350270" target="_blank" rel="noopener noreferrer">Actualizaciones</a></li>
 </ul>
 </div>
 </div>
@@ -2279,3 +2279,4 @@ animateElements.forEach(el => {
 </script>
 </body>
 </html>
+
